--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "my-react-website",
+  "name": "my-react-project",
   "version": "1.0.0",
+  "description": "A simple React project",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://siddharthsbhadauria.github.io/hello",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.0.0"
   },
-  "homepage": "https://siddharthsbhadauria.github.io/hello"
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
+  "license": "MIT"
 }
