--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,24 +3,21 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - gh-website  # Change to the branch where your code is
+      - gh-pages
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Install dependencies
         run: npm install
-
-      - name: Build project
-        run: npm run build  # Ensure your project has a build script in package.json
-
+      - name: Build React app
+        run: npm run build
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: gh-pages/deploy@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build  # This is the default build output directory
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          target_dir: build
